add_subdirectory(plugins.d)

add_subdirectory(apps.plugin)
add_subdirectory(checks.plugin)
add_subdirectory(cups.plugin)
add_subdirectory(cgroups.plugin)
add_subdirectory(diskspace.plugin)
add_subdirectory(freeipmi.plugin)
add_subdirectory(idlejitter.plugin)
add_subdirectory(nfacct.plugin)
add_subdirectory(perf.plugin)
add_subdirectory(proc.plugin)
add_subdirectory(slabinfo.plugin)
add_subdirectory(statsd.plugin)
add_subdirectory(tc.plugin)
add_subdirectory(timex.plugin)
add_subdirectory(xenstat.plugin)
