[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
more-asserts = "0.3.1"

[lib]
name = "adapter"
crate-type = ["lib", "staticlib"]

[build-dependencies] 
cbindgen = "0.20.0"
